--- a/SudokuSolver/SudokuSolver.vcxproj
+++ b/SudokuSolver/SudokuSolver.vcxproj
@@ -139,7 +139,7 @@
     </Link>
   </ItemDefinitionGroup>
   <ItemGroup>
-    <ClCompile Include="SudokuSolver.cpp" />
+    <ClCompile Include="src\SudokuSolver.cpp" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
