--- a/SudokuSolver/SudokuSolver.vcxproj.filters
+++ b/SudokuSolver/SudokuSolver.vcxproj.filters
@@ -18,5 +18,13 @@
     <ClCompile Include="src\SudokuSolver.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
+    <ClCompile Include="Cell.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
+  </ItemGroup>
+  <ItemGroup>
+    <ClInclude Include="Cell.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
   </ItemGroup>
 </Project>
