--- a/SudokuSolver/SudokuSolver.vcxproj.filters
+++ b/SudokuSolver/SudokuSolver.vcxproj.filters
@@ -18,12 +18,12 @@
     <ClCompile Include="src\SudokuSolver.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
-    <ClCompile Include="Cell.cpp">
+    <ClCompile Include="src\Cell.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
   </ItemGroup>
   <ItemGroup>
-    <ClInclude Include="Cell.h">
+    <ClInclude Include="src\Cell.h">
       <Filter>Header Files</Filter>
     </ClInclude>
     <ClInclude Include="src\timer\Timer.h">
